# cc-discord

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
hooks/: event.py  notify-notification.py  notify-stop.py  pretooluse-approve.py
packaging/: claude-discord-bridge.service
scripts/: install-systemd-user.sh  phantom_client.py  run-foreground.sh
skills/: README.md  SKILL.md  ask_discord.py
src/bridge/: approvals.py  bot.py  cli.py  commands.py  listener.py  phantom.py  projects.py  secrets.py  server.py  skills.py  state.py  tasks.py  threads.py  tool_summary.py  transcript.py  usage.py  verbosity.py  voice.py  zellij.py
tests/: conftest.py  fakes.py  test_approvals.py  test_ask_discord.py  test_bot.py  test_cli.py  test_commands.py  test_event_hook.py  test_listener.py  test_notify_notification.py  test_notify_stop.py  test_phantom.py  test_pins.py  test_pretooluse_hook.py  test_project_resolver.py  test_projects.py  test_secrets.py  test_server.py  test_skills.py  test_smoke.py  test_state.py  test_task_settings.py  test_tasks.py  test_threads.py  test_tool_summary.py  test_transcript.py  test_verbosity.py  test_zellij.py
tests/fixtures/: zellij_list_panes.json
