[project]
name = "claude-discord-bridge"
version = "0.1.0"
description = "Localhost HTTP bridge between Claude Code sessions and Discord."
requires-python = ">=3.12,<4"
dependencies = [
    "aiohttp>=3.9",
    "aiosqlite>=0.21",
    "click>=8.1",
    "discord.py>=2.4",
]

[project.scripts]
claude-discord-bridge = "bridge.cli:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bridge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
